$Id: ChangeLog,v 1.387 2007/07/16 15:53:27 haraldkipp Exp $

2007-07-16  Harald Kipp  <harald.kipp@egnite.de>

	* configure.ac: Supports latest autoconf.

	* dev/Makefile: RTC support was missing.

	* include/arch/arm/at91sam9260.h: Default PIO_BASE added.

	* include/cfg/twi.h: Missing default delay added.

	* pro/Makefile: Missing discovery support added.

2007-07-13  Ole Reinhardt <ole.reinhardt@embedded-it.de>
	* include/arch/arm/at91sam7x.h: Added UDP support
        * include/arch/arm/at91_udp.h: Defines for arm7 UDP controller

2007-07-09  Ole Reinhardt <ole.reinhardt@embedded-it.de>
	* net/Makefile:	Commented in igmp_in.c and igmp_out.c again 
        * net/ipin.c: igmp support reenabled

2007-07-09  Ole Reinhardt <ole.reinhardt@embedded-it.de>
	* dev/twbbif.c: Added default TWI_DELAY for avr architecture 
        to allow in-tree compilation
	* net/Makefile:	Commented out igmp support as long as it does 
        not exists to allow in-tree compilation
        * net/ipin.c: Commented out igmp support as long as it does not compile

2007-08-06  Ole Reinhardt <ole.reinhardt@embedded-it.de>
	* arch/arm/init/crtat91sam7x256_rom.S: 
        Corrected inlude path names. Changed backslash to slash

2007-06-14  Matthias Ringwald <mringwal@inf.ethz.ch>
	* include/sys/thread.c, arch/avr/os/nutinit.c: NutThreadSetSleepMode
	now returns previous sleep mode
    
	* arch/avr/os/nutinit.c: Disable ADC and buskeeper during idle thread
	sleep, if IDLE_THREAD_ADC_OFF and IDLE_THREAD_BUSKEEPER_OFF are defined.
     
2007-06-01  Harald Kipp  <harald.kipp@egnite.de>

	* app/caltime/caltime.c, app/caltime/Makefile, app/Makefile:
	New application sample demonstrates calendar functions.

	* conf/ethernut30d.conf: Rev-D boards failed to work with latest
	Nut/OS release.

	* crt/time.c: Bug #1724015 fixed. Thanks to Andreas Helmcke.
	Simplified code in time().

	* dev/x12rtc.c: Automatic detection of X1226 or X1286. Fixed