@@ -26,7 +26,9 @@ do
 #	echo "  6) Renesas H8/3069F" # just an example
 #	echo "  7) Renesas H8S/2676F" # just an example
 #	echo "  8) OKI ML67Q5003" # just an example
-        echo "  a) AT91R40008"
+	echo "  a) Atmel AT91R40008"
+	echo "  b) Atmel AT91SAM7X(C)256"
+	echo "  c) Atmel AT91SAM9260"
 	echo ""
 	echo -n "Selection -> "
 	read answ
@@ -40,7 +42,9 @@ do
 #	6) DEV=H8/3069F; ARCH=h8300h ;; # just an example
 #	7) DEV=H8S/2676F; ARCH=h8300s ;; # just an example
 #	8) DEV=ML67Q5003; ARCH=arm ;; # just an example
-        a) DEV=AT91R40008; ARCH=arm ;;
+        a) DEV=AT91R40008; ARCH=arm; CPU=arm7tdmi ;;
+	b) DEV=AT91SAM7X256; ARCH=arm; CPU=arm7tdmi ;;
+	c) DEV=AT91SAM9260; ARCH=arm; CPU=arm9 ;;
 	*)
 		echo "invalid choice" ;;
 	esac
@@ -71,10 +75,10 @@ if [ "$ARCH" = "avr" ]; then
     ln -s -f Makedefs.avr-gcc Makedefs
     ln -s -f Makerules.avr-gcc Makerules
 
-    ln -s -f app/Makedefs.avr-gcc app/Makedefs
-    ln -s -f app/Makerules.avr-gcc app/Makerules
+    ln -s -f Makedefs.avr-gcc app/Makedefs
+    ln -s -f Makerules.avr-gcc app/Makerules
 
-    # Ask which isp programmer is being used
+    # Ask which target board is being used
 
     unset PLATFORM
     while [ "x$PLATFORM" = "x" ]
@@ -96,6 +100,8 @@ if [ "$ARCH" = "avr" ]; then
 		    echo "invalid choice" ;;
         esac
     done
+
+    # Ask which crystal is being used
 
     unset CRYSTAL
     while [ "x$CLOCKSEL" = "x" ]
@@ -124,6 +130,8 @@ if [ "$ARCH" = "avr" ]; then
         esac
     done
 
+    # Ask which isp programmer is being used
+
     unset UISP_PROG
     while [ "x$UISP_PROG" = "x" ]
     do
@@ -150,6 +158,7 @@ if [ "$ARCH" = "avr" ]; then
         echo ""
         echo "  1) uisp"
         echo "  2) avrdude"
+        echo "  9) mine is not listed here"
         echo ""
         echo -n "Selection -> "
         read answ
@@ -157,6 +166,7 @@ if [ "$ARCH" = "avr" ]; then
         case "$answ" in
         1) PROGRAMMER=usip ; BURNFLAGS="-dprog=$UISP_PROG --erase --upload --verify if=\$(TARG)" ;;
         2) PROGRAMMER=avrdude ; BURNFLAGS="-p $CPU -c $UISP_PROG -U flash:w:\$(TARG) -E noreset" ;;
+        9) PROGRAMMER="echo" ; BURNFLAGS="See UserConf.mk" ;;
         *)
             echo "invalid choice" ;;
         esac
@@ -276,7 +286,7 @@ EOF
     exit 0
 fi
 
-# Set up environment for ARM  microcontrollers
+# Set up environment for ARM  microcontrollers ======================================================
 
 if [ "$ARCH" = "arm" ]; then
 
@@ -287,7 +297,7 @@ if [ "$ARCH" = "arm" ]; then
 	    echo "Can't find ARM gcc. :-("
 	    echo ""
 	    echo "This could mean either of the following:"
-	    echo "  1: You don't have ARM gcc installed. Go to http://www.gnuarm.org"
+	    echo "  1: You don't have ARM GCC installed."
 	    echo "  2: You don't have your PATH environment variable set right."
 	    echo "Here is your PATH variable:"
 	    echo ""
@@ -305,7 +315,7 @@ if [ "$ARCH" = "arm" ]; then
 #	# flags for H8S micros
 #	MCUOPTS="-ms -mint32"
 #    fi
-    MCUOPTS="-mcpu=arm7tdmi"
+    MCUOPTS="-mcpu=$CPU"
 
     # Setup paths to libc and libgcc for linker
 
@@ -315,49 +325,87 @@ if [ "$ARCH" = "arm" ]; then
 #    LIBCDIR="arm-elf/lib/$ARCH"
 #    LDDIRS="-L $GCCDIR/../$LIBGCCDIR -L $GCCDIR/../$LIBCDIR"
 
-    # Select whether code is to be executed from ROM or RAM
+    # Ask which target board is being used
 
-    CODEMEM="ram"
-    unset RUNFLAG
-    echo "Ethernut code can be run from RAM. This is useful when you are"
-    echo "debugging your application. Remember that your hardware must"
-    echo "have enough RAM to store data and program code."
-    echo ""
-    echo -n "Should Nut/OS be executed from RAM (default=Yes)? Y(es)/N(o) "
-    read answ
+    unset PLATFORM
+    while [ "x$PLATFORM" = "x" ]
+    do 
+        echo "Do you use a standard board?"
+        echo ""
+        echo "  0) No standard"
+	if [ "$DEV" = "AT91R40008" ]; then
+            echo "  1) Ethernut 3"
+	fi
+	if [ "$DEV" = "AT91SAM7X256" ]; then
+            echo "  2) Atmel AT91SAM7X Evaluation Kit"
+	fi
+	if [ "$DEV" = "AT91SAM9260" ]; then
+	    echo "  3) Atmel AT91SAM9260 Evaluation Kit"
+	fi
+        echo ""
+        echo -n "Selection -> "
+        read answ
 
-    if [ "$answ" = "n" -o "$answ" = "N" ]; then
-	CODEMEM="boot"
+        case "$answ" in
+        0) ;;
+        1) PLATFORM=ETHERNUT3 ;;
+        2) PLATFORM=AT91SAM7X_EK ;;
+        3) PLATFORM=AT91SAM9260_EK ;;
+	*)
+	    echo "invalid choice" ;;
+        esac
+    done
+
+    # Select linker script
+
+    if [ "$DEV" = "AT91SAM7X256" ]; then
+        LDNAME="at91sam7x256_rom"
+    else
+        echo "Nut/OS can be run from RAM. This is useful when you are"
+        echo "using a TFTP bootloader or debugging your application."
+        echo "Remember that your hardware must have enough RAM"
+        echo "to store data and program code."
+        echo ""
+        echo -n "Should Nut/OS be executed from RAM (default=Yes)? Y(es)/N(o) "
+        read answ
+
+        if [ "$answ" = "n" -o "$answ" = "N" ]; then
+            if [ "$DEV" = "AT91SAM9260" ]; then
+                LDNAME="at91sam9260_ram"
+            else
+                LDNAME="at91_boot"
+            fi
+        else
+            if [ "$DEV" = "AT91SAM9260" ]; then
+                LDNAME="at91sam9260_ram"
+            else
+                LDNAME="at91_ram"
+            fi
+        fi
     fi
     echo ""
-
-    # Choose appropriate linker script
-
-    case "$DEV" in
-	ML67Q5003) LDSCRIPT=nut-arm-ml67q5003-$CODEMEM.ld ;;
-    esac
 
     # Make links to included make fragments
 
     ln -s -f Makedefs.arm-gcc Makedefs
     ln -s -f Makerules.arm-gcc Makerules
 
-    ln -s -f app/Makedefs.arm-gcc app/Makedefs
-    ln -s -f app/Makerules.arm-gcc app/Makerules
+    ln -s -f Makedefs.arm-gcc app/Makedefs
+    ln -s -f Makerules.arm-gcc app/Makerules
 
     # Generate config file
     cat <<EOF > UserConf.mk
-PLATFORM=ETHERNUT3
+PLATFORM=$PLATFORM
 HWDEF+=-D\$(PLATFORM)
-DEVICE=at91r40008
-MCU=arm7tdmi
+DEVICE=$DEV
+MCU=$CPU
 ARCH=$ARCH
 MCUOPTS=$MCUOPTS
 RUNFLAG=$RUNFLAG
-LDNAME=at91_$CODEMEM
+LDNAME=$LDNAME
 LDSCRIPT=\$(top_srcdir)/arch/arm/ldscripts/\$(LDNAME).ld
 #LDDIRS=$LDDIRS
-#BURN=h8write
+#BURN=jtagomat
 #BURNFLAGS=\$(TARG)
 CRUROM=crurom
 EOF
